--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cls && nodemon server.js"
   },
-  "keywords": ["Harry Potter", "Magic"],
+  "keywords": [
+    "Harry Potter",
+    "Magic"
+  ],
   "author": "Gustavo Alves",
   "license": "MIT",
   "description": "Atividade com GET",
